--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "mongoose-slug-generator": "^1.0.4",
