--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.20.5",
     "bcrypt": "^5.1.1",
     "be": "file:",
     "body-parser": "^1.20.3",
