--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.20.5",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "be": "file:",
     "body-parser": "^1.20.3",
@@ -17,7 +18,7 @@
     "express-session": "^1.18.1",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2",
+    "mongoose": "^8.9.5",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
